--- a/src/SFA.Apprenticeships.Data.Migrate.Tests/SFA.Apprenticeships.Data.Migrate.Tests.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.Tests/SFA.Apprenticeships.Data.Migrate.Tests.csproj
@@ -89,6 +89,10 @@
       <Project>{9e449fbf-6da9-4c0a-8c59-f1bb2fdf848c}</Project>
       <Name>SFA.Infrastructure.Console</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Infrastructure.Sql\SFA.Infrastructure.Sql.csproj">
+      <Project>{5f790d5c-5da8-4cbb-b24d-7c3d565a251b}</Project>
+      <Name>SFA.Infrastructure.Sql</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.Infrastructure\SFA.Infrastructure.csproj">
       <Project>{1f500137-c8e9-49aa-886e-1922d9d870eb}</Project>
       <Name>SFA.Infrastructure</Name>
