--- a/src/SFA.Infrastructure.Sql/SFA.Infrastructure.Sql.csproj
+++ b/src/SFA.Infrastructure.Sql/SFA.Infrastructure.Sql.csproj
@@ -46,6 +46,8 @@
   <ItemGroup>
     <Compile Include="IGetOpenConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlMapperExtensionsCustom.cs" />
+    <Compile Include="TypeExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
