Show manage dates link in applications page.

--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Providers\ProviderUser\ProviderUserProviderTests.cs" />
     <Compile Include="Providers\VacancyPosting\CreateVacancyTests.cs" />
     <Compile Include="Providers\VacancyPosting\GetNewVacancyTests.cs" />
+    <Compile Include="Providers\VacancyPosting\ManageDatesTests.cs" />
     <Compile Include="Providers\VacancyPosting\SaveVacancyTests.cs" />
     <Compile Include="Providers\VacancyPosting\SubmitVacancyTests.cs" />
     <Compile Include="Providers\VacancyPosting\TestBase.cs" />
