--- a/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
@@ -118,13 +118,13 @@
     <Compile Include="Providers\Version51\VacancyDetailsProvider\ExceptionHandlingTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByQueryTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByReferenceNumberTests.cs" />
-    <Compile Include="Providers\Version51\VacancyUploadProvider\ArgumentTests.cs" />
+    <Compile Include="Providers\Version51\VacancyUploadMediator\ArgumentTests.cs" />
     <Compile Include="Builders\VacancyUploadDataBuilder.cs" />
     <Compile Include="Validators\EmployerDataValidatorTests.cs" />
     <Compile Include="Validators\VacancyUploadDataValidatorTests.cs" />
-    <Compile Include="Providers\Version51\VacancyUploadProvider\VacancyUploadProviderTests.cs" />
-    <Compile Include="Providers\Version51\VacancyUploadProvider\Extensions\VacancyUploadResultDataExtensions.cs" />
-    <Compile Include="Providers\Version51\VacancyUploadProvider\ValidVacancyUploadDataTests.cs" />
+    <Compile Include="Providers\Version51\VacancyUploadMediator\VacancyUploadMediatorTests.cs" />
+    <Compile Include="Providers\Version51\VacancyUploadMediator\Extensions\VacancyUploadResultDataExtensions.cs" />
+    <Compile Include="Providers\Version51\VacancyUploadMediator\ValidVacancyUploadDataTests.cs" />
     <Compile Include="ServiceImplementation\Version51\ReferenceDataServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceImplementation\Version51\VacancyDetailsServiceTests.cs" />
