--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -515,6 +515,7 @@
     <Content Include="Views\Vacancy\_apprenticeshipLocationSelectorNonJS.cshtml" />
     <Content Include="Views\Vacancy\Locations.cshtml" />
     <Content Include="Views\Vacancy\_ContactDetailsAndVacancyHistory.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\_VacancyLinks.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
