--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.Tests/packages.config
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.Tests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="AutoMapper" version="4.1.1" targetFramework="net452" />
   <package id="Microsoft.SqlServer.Dac" version="1.0.1" targetFramework="net452" />
+  <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
   <package id="NUnit" version="3.0.1" targetFramework="net452" />
 </packages>
