Generate inserts automatically from entity properties.

--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.Tests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.Tests.csproj
@@ -89,6 +89,22 @@
       <HintPath>..\packages\Microsoft.SqlServer.Dac.1.0.1\lib\Microsoft.SqlServer.Dac.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Mono.Cecil, Version=0.9.6.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <HintPath>..\packages\Mono.Cecil.0.9.6.1\lib\net45\Mono.Cecil.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Mono.Cecil.Mdb, Version=0.9.6.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <HintPath>..\packages\Mono.Cecil.0.9.6.1\lib\net45\Mono.Cecil.Mdb.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Mono.Cecil.Pdb, Version=0.9.6.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <HintPath>..\packages\Mono.Cecil.0.9.6.1\lib\net45\Mono.Cecil.Pdb.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Mono.Cecil.Rocks, Version=0.9.6.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <HintPath>..\packages\Mono.Cecil.0.9.6.1\lib\net45\Mono.Cecil.Rocks.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Moq, Version=4.2.1510.2205, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
       <Private>True</Private>
@@ -98,6 +114,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -109,6 +126,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="DatabaseInitialiser.cs" />
+    <Compile Include="Formatters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -123,6 +141,10 @@
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql\SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.csproj">
       <Project>{20ddead1-3417-4a18-8186-d9c8ca88b690}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.NewDB.Domain.Entities\SFA.Apprenticeships.NewDB.Domain.Entities.csproj">
+      <Project>{0298ef49-182c-42b8-a3d1-6f3bea9e4d1f}</Project>
+      <Name>SFA.Apprenticeships.NewDB.Domain.Entities</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Infrastructure.Sql\SFA.Infrastructure.Sql.csproj">
       <Project>{5F790D5C-5DA8-4CBB-B24D-7C3D565A251B}</Project>
