--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.csproj
@@ -109,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\MongoReferenceNumber.cs" />
+    <Compile Include="OfflineApprenticeshipVacancyRepository.cs" />
     <Compile Include="ReferenceNumberRepository.cs" />
     <Compile Include="Entities\MongoApprenticeshipVacancy.cs" />
     <Compile Include="IoC\VacancyRepositoryRegistry.cs" />
