--- a/src/SFA.Apprenticeships.Application.Vacancy/SFA.Apprenticeships.Application.Vacancy.csproj
+++ b/src/SFA.Apprenticeships.Application.Vacancy/SFA.Apprenticeships.Application.Vacancy.csproj
@@ -91,6 +91,7 @@
     <Compile Include="IVacancyDataProvider.cs" />
     <Compile Include="IAllVacanciesProvider.cs" />
     <Compile Include="IVacancySearchProvider.cs" />
+    <Compile Include="OfflineVacancyService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SiteMap\ISiteMapVacancyProvider.cs" />
     <Compile Include="SiteMap\SiteMapVacancy.cs" />
