--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Web.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Web.config
@@ -22,6 +22,7 @@
         <add namespace="SFA.Apprenticeships.Web.Common.Framework" />
         <add namespace="SFA.Apprenticeships.Web.Common.Models.Common" />
         <add namespace="SFA.Apprenticeships.Web.Common.ViewModels.Locations" />
+        <add namespace="SFA.Apprenticeships.Web.Common.Views.Shared.DisplayTemplates"/>
         <add namespace="SFA.Apprenticeships.Web.Candidate" />
         <add namespace="SFA.Apprenticeships.Web.Candidate.Constants" />
         <add namespace="SFA.Apprenticeships.Web.Candidate.Helpers" />
