API: mediator refactoring.

--- a/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
@@ -115,17 +115,19 @@
     <Compile Include="Mappers\VacancyDurationMapperTests.cs" />
     <Compile Include="Mappers\VacancyUploadRequestMapperTests.cs" />
     <Compile Include="Mappers\WageMapperTests.cs" />
+    <Compile Include="Mediators\ReferenceDataService\ReferenceDataServiceMediatorTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\ExceptionHandlingTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByQueryTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByReferenceNumberTests.cs" />
-    <Compile Include="Providers\Version51\VacancyUploadMediator\ArgumentTests.cs" />
+    <Compile Include="Mediators\VacancyUploadMediator\ArgumentTests.cs" />
     <Compile Include="Builders\VacancyUploadDataBuilder.cs" />
+    <Compile Include="ServiceImplementation\Version51\ReferenceDataService\GetErrorCodesTests.cs" />
     <Compile Include="Validators\EmployerDataValidatorTests.cs" />
     <Compile Include="Validators\VacancyUploadDataValidatorTests.cs" />
-    <Compile Include="Providers\Version51\VacancyUploadMediator\VacancyUploadMediatorTests.cs" />
-    <Compile Include="Providers\Version51\VacancyUploadMediator\Extensions\VacancyUploadResultDataExtensions.cs" />
-    <Compile Include="Providers\Version51\VacancyUploadMediator\ValidVacancyUploadDataTests.cs" />
-    <Compile Include="ServiceImplementation\Version51\ReferenceDataServiceTests.cs" />
+    <Compile Include="Mediators\VacancyUploadMediator\VacancyUploadMediatorTests.cs" />
+    <Compile Include="Mediators\VacancyUploadMediator\Extensions\VacancyUploadResultDataExtensions.cs" />
+    <Compile Include="Mediators\VacancyUploadMediator\ValidVacancyUploadDataTests.cs" />
+    <Compile Include="ServiceImplementation\Version51\ReferenceDataService\GetApprenticeshipFrameworksTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceImplementation\Version51\VacancyDetailsServiceTests.cs" />
     <Compile Include="ServiceImplementation\Version51\VacancyManagementServiceTests.cs" />
