--- a/src/SFA.Apprenticeship.Api.AvService/SFA.Apprenticeship.Api.AvService.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService/SFA.Apprenticeship.Api.AvService.csproj
@@ -305,6 +305,8 @@
     <Compile Include="Mappers\Version51\VacancyDurationMapper.cs" />
     <Compile Include="Mappers\Version51\VacancyUploadRequestMapper.cs" />
     <Compile Include="Mappers\Version51\WageMapper.cs" />
+    <Compile Include="Mediators\Version51\ReferenceDataServiceMediator.cs" />
+    <Compile Include="Mediators\Version51\IReferenceDataServiceMediator.cs" />
     <Compile Include="MessageContracts\Version51\GetApprenticeshipFrameworksRequest.cs" />
     <Compile Include="MessageContracts\Version51\GetApprenticeshipFrameworksResponse.cs" />
     <Compile Include="MessageContracts\Version51\GetCountiesRequest.cs" />
@@ -332,11 +334,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\Version51\IVacancyDetailsProvider.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider.cs" />
-    <Compile Include="Mediators\Version51\VacancyUploadMediator.cs" />
+    <Compile Include="Mediators\Version51\VacancyUploadServiceMediator.cs" />
     <Compile Include="ServiceContracts\Version51\IReferenceData.cs" />
     <Compile Include="ServiceContracts\Version51\IVacancyDetails.cs" />
     <Compile Include="ServiceContracts\Version51\IVacancyManagement.cs" />
-    <Compile Include="Mediators\Version51\IVacancyUploadMediator.cs" />
+    <Compile Include="Mediators\Version51\IVacancyUploadServiceMediator.cs" />
     <Compile Include="ServiceImplementation\Version51\ReferenceDataService.cs" />
     <Compile Include="ServiceImplementation\Version51\VacancyDetailsService.cs" />
     <Compile Include="ServiceImplementation\Version51\VacancyManagementService.cs" />
