WIP postal address lookup bits.  Interfaces added, unit tests not yet.

--- a/src/SFA.Apprenticeships.Application.Location/SFA.Apprenticeships.Application.Location.csproj
+++ b/src/SFA.Apprenticeships.Application.Location/SFA.Apprenticeships.Application.Location.csproj
@@ -89,8 +89,10 @@
     <Compile Include="AddressSearchService.cs" />
     <Compile Include="IAddressLookupProvider.cs" />
     <Compile Include="ILocationLookupProvider.cs" />
+    <Compile Include="IPostalAddressLookupProvider.cs" />
     <Compile Include="IPostcodeLookupProvider.cs" />
     <Compile Include="LocationSearchService.cs" />
+    <Compile Include="PostalAddressSearchService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
