Work on SQL Schema and mapping - tests now pass Enable WageType upsert in database project, remove from test project Add WageInterval and various missing fields to database, POCO and mappings VacancyId is now not defaulted and must be set Use constants rather than literals for test vacancy object

--- a/src/SFA.Apprenticeships.NewDB.Domain.Entities/SFA.Apprenticeships.NewDB.Domain.Entities.csproj
+++ b/src/SFA.Apprenticeships.NewDB.Domain.Entities/SFA.Apprenticeships.NewDB.Domain.Entities.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Vacancy\VacancyStatu.cs" />
     <Compile Include="Vacancy\VacancyType.cs" />
     <Compile Include="Address\ValidationSource.cs" />
+    <Compile Include="Vacancy\WageInterval.cs" />
     <Compile Include="Vacancy\WageType.cs" />
     <Compile Include="WebProxyConsumer.cs" />
   </ItemGroup>
