--- a/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
@@ -108,31 +108,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Mappers\AddressMapperTests.cs" />
-    <Compile Include="Mappers\ApprenticeshipVacancyQueryMapperTests.cs" />
-    <Compile Include="Mappers\ApprenticeshipVacancyMapperTests.cs" />
-    <Compile Include="Mappers\EmployerDataMapperTests.cs" />
-    <Compile Include="Mappers\VacancyDurationMapperTests.cs" />
-    <Compile Include="Mappers\VacancyUploadRequestMapperTests.cs" />
-    <Compile Include="Mappers\WageMapperTests.cs" />
-    <Compile Include="Mediators\ReferenceDataService\ReferenceDataServiceMediatorTests.cs" />
-    <Compile Include="Providers\Version51\AuthenticationProviderTests.cs" />
+    <Compile Include="Mappers\Version51\AddressMapperTests.cs" />
+    <Compile Include="Mappers\Version51\ApprenticeshipVacancyQueryMapperTests.cs" />
+    <Compile Include="Mappers\Version51\ApprenticeshipVacancyMapperTests.cs" />
+    <Compile Include="Mappers\Version51\EmployerDataMapperTests.cs" />
+    <Compile Include="Mappers\Version51\VacancyDurationMapperTests.cs" />
+    <Compile Include="Mappers\Version51\VacancyUploadRequestMapperTests.cs" />
+    <Compile Include="Mappers\Version51\WageMapperTests.cs" />
+    <Compile Include="Mediators\Version51\ReferenceDataService\ReferenceDataServiceMediatorTests.cs" />
+    <Compile Include="Providers\AuthenticationProviderTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\ExceptionHandlingTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByQueryTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByReferenceNumberTests.cs" />
-    <Compile Include="Mediators\VacancyUploadMediator\ArgumentTests.cs" />
-    <Compile Include="Builders\VacancyUploadDataBuilder.cs" />
+    <Compile Include="Builders\Version51\VacancyUploadDataBuilder.cs" />
     <Compile Include="ServiceImplementation\Version51\ReferenceDataService\GetErrorCodesTests.cs" />
-    <Compile Include="Validators\EmployerDataValidatorTests.cs" />
-    <Compile Include="Validators\VacancyUploadDataValidatorTests.cs" />
-    <Compile Include="Mediators\VacancyUploadMediator\VacancyUploadMediatorTests.cs" />
-    <Compile Include="Mediators\VacancyUploadMediator\Extensions\VacancyUploadResultDataExtensions.cs" />
-    <Compile Include="Mediators\VacancyUploadMediator\ValidVacancyUploadDataTests.cs" />
+    <Compile Include="Services\WebServiceConsumerServiceTests.cs" />
+    <Compile Include="Validators\Version51\EmployerDataValidatorTests.cs" />
+    <Compile Include="Validators\Version51\VacancyUploadDataValidatorTests.cs" />
+    <Compile Include="Mediators\Version51\VacancyUploadMediator\VacancyUploadMediatorTests.cs" />
+    <Compile Include="Mediators\Version51\VacancyUploadMediator\Extensions\VacancyUploadResultDataExtensions.cs" />
     <Compile Include="ServiceImplementation\Version51\ReferenceDataService\GetApprenticeshipFrameworksTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceImplementation\Version51\VacancyDetailsServiceTests.cs" />
     <Compile Include="ServiceImplementation\Version51\VacancyManagementServiceTests.cs" />
-    <Compile Include="Validators\VacancyUploadRequestValidatorTests.cs" />
+    <Compile Include="Validators\Version51\VacancyUploadRequestValidatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
