--- a/src/SFA.Apprenticeship.Api.AvService/packages.config
+++ b/src/SFA.Apprenticeship.Api.AvService/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net451" />
+  <package id="Dapper" version="1.42" targetFramework="net451" />
   <package id="EnterpriseLibrary.Common" version="5.0.505.0" targetFramework="net451" />
   <package id="EnterpriseLibrary.ExceptionHandling" version="5.0.505.0" targetFramework="net451" />
   <package id="EnterpriseLibrary.ExceptionHandling.WCF" version="5.0.505.0" targetFramework="net451" />
